# rviz2-web

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_GUIDE.md  PROJECT_STATUS.md  README.md  README_en.md  install.sh  release.sh  start.sh
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  configs.py  ros.py  video.py
backend/app/core/: config.py  security.py  version.py
backend/app/models/: ros.py
backend/app/services/: connection_manager.py  dependencies.py  frequency_tracker.py  message_converter.py  message_types.py  rosbridge.py  ws_handlers.py
backend/app/static/swagger-ui/: swagger-init.js
backend/tests/: conftest.py  test_configs.py  test_connection_manager.py  test_docs.py  test_message_serialization.py  test_public_access.py  test_release_script.py  test_ros_cli.py  test_rosbridge_stability.py  test_start_script.py  test_topic_metadata.py  test_version.py  test_video.py  test_websocket_protocol.py
docker/: nginx.conf  start-container.sh
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: theme-bootstrap.css  theme-bootstrap.js
frontend/src/: App.vue  main.js
frontend/tests/: chartTopics.test.js  configSnapshot.test.js  configStatusStore.test.js  connectionReconnect.test.js  jpegFrameParser.test.js  markerState.test.js  pointCloudDecoder.test.js  rtspUrl.test.js  systemMessage.test.js  tfBuffer.test.js  (+3 more)
rvizweb_configs/: default.rvizweb  default1.rvizweb  uav1.rvizweb
scripts/: add-release-notes.mjs  sync-version.mjs
(+37 files in other folders)
