[project]
name = "rviz-web-backend"
version = "1.1.0"
description = "ROS 2 web visualization backend"
requires-python = ">=3.10,<3.13"
dependencies = [
  "aiofiles==23.2.1",
  "colorlog==6.7.0",
  "fastapi==0.104.1",
  "numpy>=1.21.0",
  "psutil==5.9.0",
  "pydantic-settings==2.5.0",
  "python-dotenv==1.0.0",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.6",
  "uvicorn[standard]==0.24.0",
  "websockets==12.0",
]

[dependency-groups]
dev = [
  "black==23.11.0",
  "flake8==6.1.0",
  "isort==5.12.0",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
]

[tool.uv]
package = false
