[project]
name = "rviz-web-backend"
version = "1.2.0"
description = "ROS 2 web visualization backend"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi==0.139.2",
  "numpy>=1.21.0",
  "psutil==5.9.0",
  "pydantic-settings==2.11.0",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "black==26.5.1",
  "flake8==7.3.0",
  "isort==5.12.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = [
  "-p", "no:ament_flake8",
  "-p", "no:launch_testing",
  "-p", "no:ament_copyright",
  "-p", "no:launch_ros",
  "-p", "no:ament_pep257",
  "-p", "no:ament_xmllint",
  "-p", "no:ament_lint",
  "-p", "no:colcon_core_warnings_stderr",
]
